# azureopenai

./: .gitignore  README.md
azurecloud/: INTERVIEW_GUIDE.md  PROJECT_INDEX.md  README.md  TECHNICAL-PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
azurecloud/.github/workflows/: deploy-rag.yml
azurecloud/azure-devops/pipelines/: frontend-pipeline.yml  functions-pipeline.yml  infrastructure-pipeline.yml
azurecloud/backend/shared/: chunking.py  config.py  evaluation.py  llm_service.py  reranker.py  retrieval.py  security.py
azurecloud/configs/search-indexes/: documents-index-lld.json  documents-index.json  multimodal-rag-index.json
azurecloud/deployments/: README.md
azurecloud/deployments/cloud/: README.md
azurecloud/deployments/desktop/: .env.example  README.md  requirements.txt
azurecloud/docs/: 01-BRD-Business-Requirements.md  02-HLD-High-Level-Design.md  03-LLD-Low-Level-Design.md  04-Architecture-Flowcharts.md  05-Building-Blocks.md  DEPLOYMENT-GUIDE.md  ENTERPRISE-ROADMAP.md  LLD-ARCHITECTURE.md  phase-10-autonomous-governance.md
azurecloud/docs/architecture/: private-network-prompt-flow.md
azurecloud/docs/enterprise-copilot/: PRD.md  architecture-diagrams.md  azure-services-checklist.md  copilot-studio-config.yaml  critical-path-dependencies.md  implementation-steps.md  project-timeline.md  technique-mapping.md
azurecloud/docs/guides/: integrate-claude-azure.md
azurecloud/eval/: eval_set.jsonl  evaluate_rag.py  foundry_cloud_eval.py  langsmith_eval.py  requirements.txt  run_eval_ci.py
azurecloud/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
azurecloud/frontend/src/: App.tsx  index.css
azurecloud/infrastructure/: README.md
azurecloud/infrastructure/bicep/: main.bicep
azurecloud/infrastructure/monitoring/: azure-monitor-alerts.tf
azurecloud/infrastructure/pipelines/: azure-pipelines-cd.yml  azure-pipelines-ci.yml  azure-pipelines-genai.yml  azure-pipelines-infra-only.yml  azure-pipelines-infra.yml  azure-pipelines-rag-platform.yml
azurecloud/infrastructure/scripts/: bootstrap-vm.sh  collect-terraform-inputs.sh  create-primitive-vm.sh  generate-terraform-config.sh
azurecloud/infrastructure/terraform/: README.md  TESTING.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
azurecloud/pipelines/: azure-pipelines.yml
azurecloud/project-1-rag-copilot/: README.md
azurecloud/project-1-rag-copilot/docs/: ARCHITECTURE.md
azurecloud/project-1-rag-copilot/infra/: main.tf
azurecloud/project-1-rag-copilot/src/: function_app.py
azurecloud/project-1-rag-copilot/tests/: test_comprehensive.py  test_function_app.py
azurecloud/project-10-code-review-copilot/: README.md
azurecloud/project-10-code-review-copilot/docs/: ARCHITECTURE.md
azurecloud/project-10-code-review-copilot/infra/: main.tf
azurecloud/project-10-code-review-copilot/src/: function_app.py
azurecloud/project-11-legal-contract-analyzer/: README.md
azurecloud/project-11-legal-contract-analyzer/docs/: ARCHITECTURE.md
azurecloud/project-11-legal-contract-analyzer/infra/: main.tf
azurecloud/project-11-legal-contract-analyzer/src/: function_app.py
azurecloud/project-11-legal-contract-analyzer/tests/: test_comprehensive.py  test_function_app.py
azurecloud/project-12-realtime-analytics-dashboard/: README.md
azurecloud/project-12-realtime-analytics-dashboard/docs/: ARCHITECTURE.md
azurecloud/project-12-realtime-analytics-dashboard/infra/: main.tf
azurecloud/project-12-realtime-analytics-dashboard/src/: function_app.py
azurecloud/project-13-data-lakehouse/: README.md
azurecloud/project-13-data-lakehouse/docs/: ARCHITECTURE.md
azurecloud/project-13-data-lakehouse/infra/: main.tf
azurecloud/project-14-multi-region-dr/: README.md  main.tf  output.tf  terraform.tfvars  tfplan  tfplan2  variables.tf
azurecloud/project-14-multi-region-dr/docs/: ARCHITECTURE.md
azurecloud/project-15-hr-talent-intelligence/: README.md
azurecloud/project-15-hr-talent-intelligence/docs/: ARCHITECTURE.md
azurecloud/project-15-hr-talent-intelligence/infra/: main.tf
azurecloud/project-15-hr-talent-intelligence/src/: function_app.py
azurecloud/project-16-esg-sustainability/: README.md
azurecloud/project-16-esg-sustainability/docs/: ARCHITECTURE.md
azurecloud/project-16-esg-sustainability/infra/: main.tf
azurecloud/project-16-esg-sustainability/src/: function_app.py
azurecloud/project-17-knowledge-graph/: README.md
azurecloud/project-17-knowledge-graph/docs/: ARCHITECTURE.md
azurecloud/project-17-knowledge-graph/infra/: main.tf
azurecloud/project-17-knowledge-graph/src/: function_app.py
azurecloud/project-18-multimodal-content/: README.md
azurecloud/project-18-multimodal-content/docs/: ARCHITECTURE.md
azurecloud/project-18-multimodal-content/infra/: main.tf
azurecloud/project-18-multimodal-content/src/: function_app.py
azurecloud/project-19-compliance-audit/: README.md
azurecloud/project-19-compliance-audit/docs/: ARCHITECTURE.md
azurecloud/project-19-compliance-audit/infra/: main.tf
azurecloud/project-19-compliance-audit/src/: function_app.py
azurecloud/project-2-document-processing/: README.md
azurecloud/project-2-document-processing/docs/: ARCHITECTURE.md
azurecloud/project-2-document-processing/infra/: main.tf
azurecloud/project-20-energy-smart-grid/: README.md
azurecloud/project-21-banking-crm/: README.md
azurecloud/project-22-contact-center/: README.md
azurecloud/project-23-knowledge-base-contact-center/: README.md
azurecloud/project-24-campaign-management/: README.md
azurecloud/project-25-digital-marketing/: README.md
azurecloud/project-26-voice-ai-outbound/: README.md
azurecloud/project-3-call-center-copilot/: README.md
azurecloud/project-4-agentic-platform/: README.md
azurecloud/project-5-fraud-detection/: README.md
azurecloud/project-6-customer-360/: README.md
azurecloud/project-7-healthcare-clinical-copilot/: README.md
azurecloud/project-8-supply-chain-optimizer/: README.md
azurecloud/project-9-iot-predictive-maintenance/: README.md
(+365 files in other folders)
